WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207802
[LFC][IFC] Anonymous inline boxes/line break boxes do not generate Display::Boxes
https://bugs.webkit.org/show_bug.cgi?id=207802
Summary
[LFC][IFC] Anonymous inline boxes/line break boxes do not generate Display::B...
alan
Reported
2020-02-14 17:50:24 PST
ssia
Attachments
Patch
(4.98 KB, patch)
2020-02-14 17:52 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.08 KB, patch)
2020-02-15 04:39 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-02-14 17:51:11 PST
<
rdar://problem/59480138
>
alan
Comment 2
2020-02-14 17:52:57 PST
Created
attachment 390844
[details]
Patch
Antti Koivisto
Comment 3
2020-02-15 00:10:34 PST
Could mention what the patch actually does.
alan
Comment 4
2020-02-15 04:39:08 PST
Created
attachment 390862
[details]
Patch
alan
Comment 5
2020-02-15 06:15:02 PST
Committed
r256701
: <
https://trac.webkit.org/changeset/256701
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug