[LFC][IFC] Anonymous inline boxes/line break boxes do not generate Display::Boxes https://bugs.webkit.org/show_bug.cgi?id=207802 <rdar://problem/59480138>

Reviewed by Antti Koivisto.

1. Painting should not expect a Display::Box per Layout::Box.
2. Do not generate empty Display::Boxes for anonymous inline text boxes/line breaks.

* layout/FormattingState.cpp:
(WebCore::Layout::FormattingState::displayBox):
* layout/displaytree/DisplayPainter.cpp:
(WebCore::Display::paintSubtree):
(WebCore::Display::collectPaintRootsAndContentRect):
* layout/inlineformatting/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::layoutInFlowContent):


Canonical link: https://commits.webkit.org/220769@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256701 268f45cc-cd09-0410-ab3c-d52691b4dbfc